# pre-app

./: .gitignore  pyproject.toml
app/: main.py  setting.py
coin/model/: currency_pair.py  resample.py
