[tool.poetry]
name = "pre-app"
version = "0.1.0"
description = ""
authors = ["zombie <shzbdatabase@gmail.com>"]
license = "zomb"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.4"
pydantic = "^2.0.3"
motor = "^3.2.0"
load-dotenv = "^0.1.0"
pymongo = "^4.4.1"
fastapi = "^0.101.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic-settings = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.4.1"
isort = "^5.12.0"
motor-types = "^1.0.0b2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
extend-ignore = "E203, E501"
max-line-length = 100
max-complexity = 10

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
